完成界面布局

--- a/database/Database.qrc
+++ b/database/Database.qrc
@@ -1,4 +1,8 @@
 <RCC>
-    <qresource prefix="Database">
+    <qresource prefix="/Database">
+        <file>state/close.png</file>
+        <file>state/language.svg</file>
+        <file>state/max.png</file>
+        <file>state/min.png</file>
     </qresource>
 </RCC>
