标题栏增加放大缩小功能

--- a/database/Database.qrc
+++ b/database/Database.qrc
@@ -6,5 +6,6 @@
         <file>state/min.png</file>
         <file>state/logo.png</file>
         <file>state/logo.svg</file>
+        <file>state/zoom.png</file>
     </qresource>
 </RCC>
