--- a/database/src/gui/src/uiframe/mainwindow/titlebar.ui
+++ b/database/src/gui/src/uiframe/mainwindow/titlebar.ui
@@ -165,6 +165,24 @@
       </property>
       <item>
        <widget class="QPushButton" name="btn_login">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>30</height>
+         </size>
+        </property>
         <property name="text">
          <string>Login</string>
         </property>
@@ -310,13 +328,13 @@
      <property name="minimumSize">
       <size>
        <width>64</width>
-       <height>22</height>
+       <height>35</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>64</width>
-       <height>22</height>
+       <height>35</height>
       </size>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
